--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,1 +1,15 @@
+<div class="posts">
+    @for(post of currentPosts; track $index) {
+        <div class="post">
+            <h2>{{post.title}}</h2>
+            <p>{{post.body}}</p>
+        </div>
+    }
+</div>
+
+<div class="pagination">
+    @for (page of pages; track $index) {
+        <span (click)="setActivePage($index)" class="page">{{$index + 1}}</span>
+    }
+</div>
 
