Implementing Service Injection Api and adding more styling for about and sources page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,3 @@
-<p>about works!</p>
+<p>This is Angular project, made for fetching online resources and displaying them on the UI</p>
+
+<div><strong>Used API : </strong> <a href="https://jsonplaceholder.typicode.com/">https://jsonplaceholder.typicode.com/</a></div>
