--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,66 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color:inherit;
+}
+
+img { display: block;}
+
 body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size:1.125rem;
+}
+
+// Custom Flex
+
+.custom-flex {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-inline: auto;
+    width:min(40rem,100% - 2rem);
+    gap:1rem;
+    text-align: center;
+    margin-block:1.5rem;
+}
+.custom-flex img {
+    width:100%;
+}
+.custom-flex .img-wrapper {
+    flex-basis:6rem;
+}
+.custom-flex .content > * {
+    margin-block:.2rem;
+}
+//---------------------
+
+// Gradient Hover Effect
+
+.gradient-hover-effect { 
+    position:relative;
+    padding:1em;
+    background: #fff;
+    border-radius: 10px;
+}
+
+.gradient-hover-effect::after {
+    content: '';
+    position: absolute;
+    z-index: -2;
+    inset:-1px;
+    background:rgba(0,0,0,0.5);
+    filter:blur(5px);
+}
+
+.gradient-hover-effect:hover::after {
+    background: linear-gradient(rgb(50, 165, 203),blue);
+}
+//---------------------
+
+.container {
+    width:min(70rem,100% - 2rem);
+    margin-inline:auto;
+    margin-block:1rem;
 }
