Adding content to home page and footer component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="grid">
+    <div class="grid-item">
+        <img src="assets/data-transfer.png" alt="data-transfer.png">
+        <h2>Fetching JSON Data</h2>
+        <p>This webapplication fetches data from external API</p>
+    </div>
+    <div class="grid-item">
+        <img src="assets/click.png" alt="click.png">
+        <h2>Displaying and accessing data</h2>
+        <p>This webapplication displays and give access to the fetched data</p>
+    </div>
+</div>
