--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<div class="posts">
+<div class="posts custom-grid">
     @for(post of currentPosts; track $index) {
         <app-post
             [postId]="post.id" 
