--- a/src/app/sources/sources.component.html
+++ b/src/app/sources/sources.component.html
@@ -22,3 +22,15 @@
     </div>
 </a>
 
+<a href="https://www.flaticon.com/" target="_blank">
+    <div class="custom-flex gradient-hover-effect">
+        <div class="img-wrapper">
+            <img src="assets/flaticon.png" alt="flaticon.png">
+        </div>
+        <div class="content">
+            <h2>Download Free Icons and Stickers for your projects.</h2>
+            <p>This website lets you download various images and icons for free</p>
+        </div>
+    </div>
+</a>
+
